<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:id="@+id/dashboard_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#81DFE6"
        tools:context=".MainActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_marks_dashboard"
            android:layout_marginTop="32dp"
            android:textSize="24sp"
            android:textColor="#8E6207"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_student_s_details_below"
            android:textColor="#03456A"
            android:textSize="16sp"
            android:gravity="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#92DEE2">
                <EditText
                    android:id="@+id/student_regNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_number"
                    android:autofillHints="registration_number"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:inputType="textPersonName"/>
                <EditText
                    android:id="@+id/et_student_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/student_name"
                    android:autofillHints="Student Name"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:inputType="textPersonName"/>
                <EditText
                    android:id="@+id/subject_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subject_code"
                    android:autofillHints="Subject Code"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:inputType="text"/>
                <EditText
                    android:id="@+id/et_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subject_name"
                    android:autofillHints="Subject Name"
                    android:inputType="text"
                    android:padding="8dp"
                    android:layout_margin="8dp"/>
                <EditText
                    android:id="@+id/et_marks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marks"
                    android:autofillHints="Marks"
                    android:inputType="number"
                    android:padding="8dp"
                    android:layout_margin="8dp"/>
                <EditText
                    android:id="@+id/cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:hint="@string/cat"
                    android:autofillHints="Cat"
                    android:layout_margin="8dp"
                    android:inputType="number"/>
                <EditText
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/total"
                    android:autofillHints="Total"
                    android:inputType="number"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:padding="8dp">
            <Button
                android:id="@+id/btn_submit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_marks"
                android:layout_marginTop="32dp"
                android:backgroundTint="@android:color/holo_green_dark"/>
            <Button
                android:id="@+id/btn_view_all"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_all_marks"
                android:layout_marginTop="32dp"
                android:backgroundTint="@android:color/holo_blue_light" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>